--- a/D2D-AliceEngine/Engine/Engine.vcxproj
+++ b/D2D-AliceEngine/Engine/Engine.vcxproj
@@ -217,6 +217,7 @@
     <ClInclude Include="TileMap\TileMapLoader.h" />
     <ClInclude Include="TileMap\TileMapComponent.h" />
     <ClInclude Include="Component\UIComponent.h" />
+    <ClInclude Include="System\TransformSystem.h" />
     <ClInclude Include="UI\UIButton.h" />
     <ClInclude Include="UI\UIText.h" />
     <ClInclude Include="UI\UIImage.h" />
@@ -298,6 +299,7 @@
     <ClCompile Include="TileMap\TileMapLoader.cpp" />
     <ClCompile Include="TileMap\TileMapComponent.cpp" />
     <ClCompile Include="Component\UIComponent.cpp" />
+    <ClCompile Include="System\TransformSystem.cpp" />
     <ClCompile Include="UI\UIButton.cpp" />
     <ClCompile Include="UI\UIText.cpp" />
     <ClCompile Include="UI\UIImage.cpp" />
